# grpc-hello

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yaml
client/: Cargo.toml  Dockerfile
client/proto/: hello.proto
client/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs  postgres_commands.rs
