[package]
name = "grpc-hello"
version = "0.1.0"
authors = ["artemiy.bezukladnikov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = {version = "0.4"}
prost = "0.7"
tokio = {version = "1.5", features = ["macros", "rt-multi-thread"]}
tokio-postgres = "0.7"
postgres = "0.19"

[build-dependencies]
tonic-build = "0.4"
