[package]
name = "client"
version = "0.1.0"
authors = ["artemiy.bezukladnikov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple_logger = "1.11.0"
tonic = "0.4.3"
prost = "0.7.0"
tokio = {version = "1.5", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.4.2"
